--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.4",
+    "node-cron": "^3.0.3",
     "openai": "^4.78.1",
     "puppeteer": "^24.0.0"
   },
