--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,11 @@
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-is": "^19.0.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
+    "react-spinners": "^0.15.0",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
