--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "ldrs": "^1.0.2",
     "lucide-react": "^0.473.0",
     "netlify": "^13.3.2",
+    "netlify-cli": "^20.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-is": "^19.0.0",
